Final version, comment T1-T5

--- a/handout_2.ipynb
+++ b/handout_2.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <div style=\"text-align:center; color:rgba(37, 40, 80);\">11753 Computational Intelligence</div>\n",
+    "# <div style=\"text-align:center; color:rgba(37, 40, 80);\">Master in Intelligent Systems</div>\n",
+    "# <div style=\"text-align:center; color:rgba(37, 40, 80);\">Universitat de les Illes Balears</div>\n",
+    "\n",
+    "### <div style=\"text-align:center; color:white;\"> Handout #2: **Feed-forward Neural Networks (FFNN)**</div>\n",
+    "\n",
+    "#### **Integrants:** Jason Adel Noboa Rivera, Pedro Marti Pico\n",
+    "#### **Group:** 06\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -131,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this task we used the `relu` activation function and the `sparse_categorical_crossentropy` as our lose function, due to we are facing a .........!!!! becauseAs it can see, the best performance is in the biggest amount, having an accuracy of 79%, bigger than the other amounts of neurons. So, we consider to take that amount of `100` neurons as the best configuration and test it for the following task"
+    "In this task we used the `relu` activation function and the `categorical_crossentropy` with a OneHotEncoding as our lose function, We take these functions as the simplest and best known to start the training. As it can see, the best performance is in the biggest amount, having an accuracy of 92.69%, bigger than the other amounts of neurons. So, we consider to take that amount of `100` neurons as the best configuration and test it for the following task."
    ]
   },
   {
@@ -180,14 +194,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it is shown, the best performance of the activations is the `relu` activation, reaching a 92% of accuracy. Having a good puntuation but still smaller than our prior configuration, that wins in terms of accuracy."
+    "As it is shown, the best performance of the activations is the `relu` activation the initial one, reaching a 92.21% of accuracy. There are other functions such as `elu` or `leaky_realu` that achieve a similar percentage so they could be options, however for this occasion, we choose the initial function. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### T3. Try with a dynamic learning rate and use it from now on if the performance does not get worse"
+    "#### T3. Try with a dynamic learning rate and use it from now on if the performance does not get worse.\n",
+    "To evaluate the performance of a dynamic learning rate we have chosen an exponential decay and to evaluate the best performance we have implemented several different parameter values for `decay_steps` and `decay_rate`."
    ]
   },
   {
@@ -222,6 +237,13 @@
     "    performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
     "\n",
     "    print(f\"Accuracy using Dynamic Learning Rate with ({d_step}) and ({d_rate}): : {performance[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The decision has been taken to choose a dynamic learning rate to guarantee the convergence of the model, and as a result of the previous evaluation, the values for `decay_steps` and `decay_rate` were chosen to be 1000 and 0.96 respectively. So we will keep a dynamic learning rate from here. "
    ]
   },
   {
@@ -272,6 +294,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the previous section it can be concluded that the optimiser we have chosen at the beginning is still the best option, as other optimisers only reduce the performance of the model, therefore we still keep `SGD` as our best option. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### T5. Switch to another loss function to check whether the performance level increases"
    ]
   },
@@ -311,6 +340,13 @@
     "        model.fit(X_train, y_train_OHE, epochs=50, batch_size=32, verbose=0)\n",
     "        performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
     "    print(f\"Accuracy using {loss_function}: {performance[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, different loss functions have now been evaluated, trying to ensure model consistency by choosing only loss functions from classification models. From this it can be obtained that the default loss function is the best option with 90.99%, however it is necessary to stress that the functions: `sparse_categorical_entropy` which is similar to ´ only it does not need OneHotEncoding and `KLDivergence` have a good performance so they could be good options as well. "
    ]
   },
   {
