--- a/handout_2.ipynb
+++ b/handout_2.ipynb
@@ -397,6 +397,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The results show a clear trend of incresing accuracy with adding more neurons to the second layer. The model withh a single 100 nueron layer had an accuracy of aproximatetly 90.09%. When a second layer is added of 50, 100 and 150 neurons, the accuracy has increased to about 92.19%, 93.09% and 93.38% respectively. This indicated that the additional complexity provided by the second layer is beneficial for this problem. Moreover, this suggest that our data and problem complexity can benefit from a deeper neural network, what means that the data patterns are cmplex and as more neurons and layers, better captured the data patterns.\n",
+    "\n",
+    "So, based on the results, in order to choose the best model, the configuration with 100 neurons in the first layer and 150 in the second layer seems to be the most effective, achieving the highest accuracy among the others configrations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### T7. Try with larger and smaller batch sizes (one of each). You should observe that the training time also changes. Adopt the size leading to highest performance"
    ]
   },
@@ -434,6 +443,19 @@
     "    model.fit(X_train, y_train_OHE, epochs=50, batch_size=batch, verbose=0)\n",
     "    performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
     "    print(f\"Accuracy using batch of {batch}: {performance[1]}. Execution time = {time.time() - start_time}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The highest accuracy is achieved with a batch size of 8, closely followed by a batch size of 2. As the batch size increases beyond 8, there's a noticeable drop in accuracy, where the smaller batch sizes (2 and 8) lead to better performance compared to larger ones (64 and 128).\n",
+    "\n",
+    "The training time decreases as the batch size increases, which is expected. Larger batch sizes allow for more efficient computation by leveraging parallel processing capabilities of the hardware. The fastest training times are observed with larger batch sizes (64 and 128), but this comes at the cost of reduced accuracy.\n",
+    "\n",
+    "So, in one hand the higher accuracy with these batch sizes suggests that the model benefits from more frequent updates of the weights. It could be that the model is better able to navigate the loss landscape and find a more optimal minimum. In the other hand, the decline in accuracy with larger batch sizes might be due to the model not being able to generalize as effectively. Larger batches provide a more approximate gradient, which could lead to convergence to less optimal points in the loss landscape.\n",
+    "\n",
+    "So, we decided to choose the configuration of batch size 16 because it strikes an efficient balance between training speed and model accuracy, offering a good trade-off. This batch size provides high accuracy while keeping training times reasonably short, making it a practical choice for our application."
    ]
   },
   {
@@ -685,6 +707,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**8a)** \n",
+    "\n",
+    "The training and validation loss curves from **Split 1** shows a strong start in learning, with rapid decrease in loss initially and a steady state reached quickly. The early stopping at epoch 70 indicates that the model's performance on the validation set ceased to improve, suggesting good convergence without overfitting. The occasional spikes in validation loss hint at the model's sensitivity to the nuances of the validation set but don't indicate a loss of generalization.\n",
+    "\n",
+    "For **Split 2**, the model reached its optimal point more quickly, as indicated by the early stopping at epoch 50. The overall smoother descent of the validation loss, compared to Split 1, suggests that the model might have encountered a more straightforward optimization landscape. The lower epoch count at stopping could also point to a validation set that was less challenging for the model to generalize\n",
+    "\n",
+    "The convergence pattern in **Split 3** is quite similar to Split 2, with early stopping again at epoch 50, implying consistency in the model's ability to learn and generalize across different data subsets. The validation loss remained low and stable post-convergence, which is indicative of a well-tuned model that generalizes well to unseen data.\n",
+    "\n",
+    "Across all splits, the model demonstrates good convergence behavior with no signs of overfitting. The use of early stopping ensures that the model doesn't train beyond the point of optimal generalization, which is corroborated by the close tracking of training and validation loss curves. The consistent performance across splits in terms of convergence behavior indicates that the model's architecture and hyperparameters are well-suited to the dataset, capable of the adaptation to different data distributions in an efficient way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**8b)** The classification reports indicate strong precision, recall, and F1 scores across all classes for each split. The consistently high values across these metrics suggest that the model is robust and generalizes well to unseen data.\n",
+    "\n",
+    "- Split 1: The classification report and confusion matrix for Split 1 show excellent classification performance across all classes. With precision, recall, and F1 scores predominantly above 0.90, the model demonstrates a strong capacity to distinguish between the different classes accurately. The highest scores are seen in classes 2, 3, and 4, which might suggest these classes have more distinctive features or less overlap with other classes.\n",
+    "\n",
+    "- Split 2: The model maintains high performance with all metrics comfortably above 0.87, reflecting its robustness. The slight increase in precision for classes 1 and 4 may point towards the model becoming more selective and confident in its predictions for these classes. However, a small decrease in accuracy compared to Split 1 could be indicative of subtle variations in the data distribution that present a slightly more challenging classification task for the model.\n",
+    "\n",
+    "- Split 3: In this split the model achieves its best performance, with high precision and recall across all classes. This is evidenced by scores that are nearly perfect, notably a precision of 1.00 in class 4. Such high performance across all metrics suggests that the features in this split are exceptionally well captured by the model, leading to confident and accurate class predictions.\n",
+    "\n",
+    "When comparing across the splits, the model shows a high level of consistency in its performance, with Split 3 being the best one in terms of metric scores. The consistent high precision and recall imply that the model is equally good at recognizing each class and avoiding false identifications. The slight variations in performance across splits are normal and reflect the differences in the data distribution of each split.\n",
+    "\n",
+    "The results underscore the model's ability to generalize from the training data to unseen data effectively. Given these results, the model's architecture and the chosen hyperparameters seem to be well-optimized for the data currently used.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### c) Calculate and provide the average value for each metric."
    ]
   },
@@ -714,6 +769,23 @@
     "print(f'Average precision: {avp_precision}')\n",
     "print(f'Average recall: {avg_recall}')\n",
     "print(f'Average f1-score: {avg_f1s}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The calculated average values for accuracy, precision, recall, and F1 score across all splits are remarkably consistent, each hovering around the 0.94 mark. This level of consistency across different metrics indicates that the model is not only correctly identifying the majority of the cases (high accuracy) but is also maintaining a balanced performance in terms of precision and recall. Doing a breakdown:\n",
+    "\n",
+    "- **Average Accuracy:** At approximately 94%, this metric suggests that the model correctly predicts the correct class most of the time across all data splits.\n",
+    "\n",
+    "- **Average Precision:** The precision of about 94% indicates that when the model predicts a certain class, it is correct 94% of the time, on average. This is important in scenarios where the cost of a false positive is high.\n",
+    "\n",
+    "- **Average Recall:** Also around 94%, this shows that the model is able to identify 94% of all actual cases for each class. This is particularly crucial in situations where missing a positive instance (false negative) has serious implications.\n",
+    "\n",
+    "- **Average F1 Score:** The F1 score, a harmonic mean of precision and recall, at roughly 94%, reflects a robust harmonic balance between precision and recall, suggesting the model is equally weighted in terms of false positives and false negatives.\n",
+    "\n",
+    "Overall, these averages indicate that the chosen model configuration generalizes well across different data splits and maintains a consistently high level of performance. "
    ]
   }
  ],
