--- a/handout_2.ipynb
+++ b/handout_2.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, different loss functions have now been evaluated, trying to ensure model consistency by choosing only loss functions from classification models. From this it can be obtained that the default loss function is the best option with 90.99%, however it is necessary to stress that the functions: `sparse_categorical_entropy` which is similar to ´ only it does not need OneHotEncoding and `KLDivergence` have a good performance so they could be good options as well. "
+    "Similarly, different loss functions have now been evaluated, trying to ensure model consistency by choosing only loss functions from classification models. From this it can be obtained that the default loss function is the best option with 90.99%, however it is necessary to stress that the functions: `sparse_categorical_entropy` which is similar to only it does not need OneHotEncoding and `KLDivergence` have a good performance so they could be good options as well. "
    ]
   },
   {
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results show a clear trend of incresing accuracy with adding more neurons to the second layer. The model withh a single 100 nueron layer had an accuracy of aproximatetly 90.09%. When a second layer is added of 50, 100 and 150 neurons, the accuracy has increased to about 92.19%, 93.09% and 93.38% respectively. This indicated that the additional complexity provided by the second layer is beneficial for this problem. Moreover, this suggest that our data and problem complexity can benefit from a deeper neural network, what means that the data patterns are cmplex and as more neurons and layers, better captured the data patterns.\n",
+    "The results show a clear trend of incresing accuracy with adding more neurons to the second layer. The model withh a single 100 nueron layer had an accuracy of aproximatetly 90.09%. When a second layer is added of 50, 100 and 150 neurons, the accuracy has increased to about 92.19%, 93.09% and 93.38% respectively. This indicated that the additional complexity provided by the second layer is beneficial for this problem. Moreover, this suggest that our data and problem complexity can benefit from a deeper neural network, what means that the data patterns are complex and as more neurons and layers, better captured the data patterns.\n",
     "\n",
     "So, based on the results, in order to choose the best model, the configuration with 100 neurons in the first layer and 150 in the second layer seems to be the most effective, achieving the highest accuracy among the others configrations."
    ]
@@ -733,7 +733,8 @@
     "When comparing across the splits, the model shows a high level of consistency in its performance, with Split 3 being the best one in terms of metric scores. The consistent high precision and recall imply that the model is equally good at recognizing each class and avoiding false identifications. The slight variations in performance across splits are normal and reflect the differences in the data distribution of each split.\n",
     "\n",
     "The results underscore the model's ability to generalize from the training data to unseen data effectively. Given these results, the model's architecture and the chosen hyperparameters seem to be well-optimized for the data currently used.\n",
-    "\n"
+    "\n",
+    "As an additional point, it can be said that by decreasing the value of the decay_rate of the dynamic learning rate to values like 0.5 a better convergence can be observed, i.e. a less noisy, smoother or \"much straighter\" validation loss, but reducing the overall model performance a bit, so it has been decided to use the value of 0.96 to obtain the best possible performance. \n"
    ]
   },
   {
