--- a/handout_2.ipynb
+++ b/handout_2.ipynb
@@ -129,16 +129,16 @@
     "# Load data\n",
     "X_train, y_train, X_test, y_test, y_train_OHE, y_test_OHE = load_data(1)\n",
     "\n",
-    "neurons_amount = [10,50,100]\n",
+    "neurons_amount = [10,50,100] # Different neuron counts to test\n",
     "\n",
     "for neurons in neurons_amount:\n",
-    "    promed = []\n",
+    "    promed = [] # List to store performance metrics for averaging\n",
     "    model = create_model([neurons],  activation_function='relu')\n",
-    "    for i in range(5):\n",
-    "        model.fit(X_train, y_train_OHE, epochs = 50, batch_size = 32, verbose=0) # Quitar verbose para ver cada epoch\n",
-    "        performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
+    "    for i in range(5): # Repeat training and evaluation 5 times for consistency\n",
+    "        model.fit(X_train, y_train_OHE, epochs = 50, batch_size = 32, verbose=0) # Training the model\n",
+    "        performance = model.evaluate(X_test, y_test_OHE, verbose=0) # Evaluating the model\n",
     "        promed.append(performance[1])\n",
-    "    print(f\"Neurons: {neurons}, Test Accuracy (median): {np.mean(promed)}\")"
+    "    print(f\"Neurons: {neurons}, Test Accuracy (median): {np.mean(promed)}\") # Printing the average accuracy"
    ]
   },
   {
@@ -181,6 +181,7 @@
     }
    ],
    "source": [
+    "# Activation functions used for T2\n",
     "activation_functions = ['relu','sigmoid', 'tanh', 'leaky_relu', 'elu', 'selu'] \n",
     "\n",
     "for activation in activation_functions:\n",
@@ -223,11 +224,13 @@
     }
    ],
    "source": [
+    "# Different decay configurations\n",
     "decays = [[10,0.5],[1000,0.3],[1000,0.5],[1000,0.96],[10000,0.9]]\n",
-    "for d_step, d_rate in decays:\n",
-    "    model = create_model(\n",
+    "\n",
+    "for d_step, d_rate in decays: # Create model with dynamic LR\n",
+    "    model = create_model( \n",
     "        layer_neurons=[100],\n",
-    "        activation_function='relu', #Is the best activation function\n",
+    "        activation_function='relu', \n",
     "        decay_steps=d_step,\n",
     "        decay_rate=d_rate,\n",
     "        dynamic = True\n",
@@ -236,6 +239,7 @@
     "    model.fit(X_train, y_train_OHE, epochs=50, batch_size=32, verbose=0)\n",
     "    performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
     "\n",
+    "    # Printing accuracy for each learning rate decay configuration\n",
     "    print(f\"Accuracy using Dynamic Learning Rate with ({d_step}) and ({d_rate}): : {performance[1]}\")"
    ]
   },
@@ -270,12 +274,13 @@
     }
    ],
    "source": [
+    "# Optimizers used for T4\n",
     "optimizers = [tf.keras.optimizers.SGD,\n",
     "              tf.keras.optimizers.Adam, \n",
     "              tf.keras.optimizers.Adadelta, \n",
     "              tf.keras.optimizers.RMSprop]\n",
     "\n",
-    "for optimizer in optimizers:\n",
+    "for optimizer in optimizers: # Create model with each optimizer\n",
     "    model = create_model(\n",
     "        layer_neurons=[100],\n",
     "        activation_function='relu',\n",
@@ -321,8 +326,11 @@
     }
    ],
    "source": [
+    "# Different loss functions\n",
     "loss_functions = ['categorical_crossentropy','sparse_categorical_crossentropy','Poisson', 'KLDivergence']\n",
     "neurons = [100]\n",
+    "\n",
+    "# Testing different loss functions\n",
     "for loss_function in loss_functions:\n",
     "    model = create_model(\n",
     "        layer_neurons=neurons,\n",
@@ -330,9 +338,11 @@
     "        decay_steps=1000,\n",
     "        decay_rate=0.96,\n",
     "        dynamic = True,\n",
-    "        optimizer=tf.keras.optimizers.SGD, # Como resultado anterior, seguimos con este\n",
+    "        optimizer=tf.keras.optimizers.SGD,\n",
     "        loss_function=loss_function\n",
     "    )\n",
+    "    \n",
+    "    # Conditional training based on loss function type (OHE or not)\n",
     "    if('sparse_categorical_crossentropy' == loss_function): \n",
     "        model.fit(X_train, y_train, epochs=50, batch_size=32, verbose=0)\n",
     "        performance = model.evaluate(X_test, y_test, verbose=0)\n",
@@ -373,7 +383,10 @@
     }
    ],
    "source": [
-    "neurons = [[100],[100,50],[100,100], [100,150]]\n",
+    "# Different configurations of neurons in layers\n",
+    "neurons = [[100],[100,50],[100,100], [100,150]] \n",
+    "\n",
+    "# Evaluating model performance with varying configurations of neurons in multiple layers\n",
     "for neuron in neurons:\n",
     "    model = create_model(\n",
     "        layer_neurons=neuron,\n",
@@ -381,12 +394,14 @@
     "        decay_steps=1000,\n",
     "        decay_rate=0.96,\n",
     "        dynamic = True,\n",
-    "        optimizer=tf.keras.optimizers.SGD, # Como resultado anterior, seguimos con este\n",
+    "        optimizer=tf.keras.optimizers.SGD,\n",
     "        loss_function='categorical_crossentropy'\n",
     "    )\n",
     "\n",
     "    model.fit(X_train, y_train_OHE, epochs=50, batch_size=32, verbose=0)\n",
     "    performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
+    "\n",
+    "    # Print accuracy based on layer configuration\n",
     "    if len(neuron) == 1:\n",
     "        print(f\"Accuracy using one layer with {neuron[0]} neurons : {performance[1]}\")\n",
     "    else:\n",
@@ -429,6 +444,8 @@
    ],
    "source": [
     "batchs = [2,8,16,32,64,128]\n",
+    "\n",
+    "# Testing model performance with different batch sizes\n",
     "for batch in batchs:\n",
     "    model = create_model(\n",
     "        layer_neurons=[100,150],\n",
@@ -436,12 +453,14 @@
     "        decay_steps=1000,\n",
     "        decay_rate=0.96,\n",
     "        dynamic = True,\n",
-    "        optimizer=tf.keras.optimizers.SGD, # Como resultado anterior, seguimos con este\n",
+    "        optimizer=tf.keras.optimizers.SGD,\n",
     "        loss_function='categorical_crossentropy'\n",
     "    )\n",
-    "    start_time = time.time()\n",
+    "    start_time = time.time() # Start timing\n",
     "    model.fit(X_train, y_train_OHE, epochs=50, batch_size=batch, verbose=0)\n",
     "    performance = model.evaluate(X_test, y_test_OHE, verbose=0)\n",
+    "\n",
+    "    # Printing accuracy and execution time for each batch size\n",
     "    print(f\"Accuracy using batch of {batch}: {performance[1]}. Execution time = {time.time() - start_time}\")"
    ]
   },
@@ -648,24 +667,29 @@
     "    print(f\"====================================== EVALUATION WITH SPLIT {split} =======================================\")\n",
     "    \n",
     "    X_train, y_train, X_test, y_test, y_train_OHE, y_test_OHE = load_data(split)\n",
+    "    \n",
+    "    # Using the best model configuration from previous tasks\n",
     "    model = create_model(\n",
     "        layer_neurons=[100,150],\n",
     "        activation_function='relu',\n",
     "        decay_steps=1000,\n",
     "        decay_rate=0.96,\n",
     "        dynamic = True,\n",
-    "        optimizer=tf.keras.optimizers.SGD, # Como resultado anterior, seguimos con este\n",
+    "        optimizer=tf.keras.optimizers.SGD,\n",
     "        loss_function='categorical_crossentropy'\n",
     "    )\n",
     "\n",
+    "    # Configuration of early stopping\n",
     "    early_stopping = EarlyStopping(\n",
     "        monitor='val_loss',\n",
     "        patience=15,\n",
     "        verbose=1,\n",
     "        restore_best_weights=True\n",
     "    )\n",
+    "\n",
     "    historia = model.fit(X_train, y_train_OHE, validation_data=(X_test, y_test_OHE), epochs=200, batch_size=16, callbacks=[early_stopping], verbose=0)\n",
     "\n",
+    "    # Plot training and validation loss\n",
     "    plt.figure(figsize=(10,5))\n",
     "    plt.plot(historia.history['loss'], label='Pérdida de entrenamiento')\n",
     "    plt.plot(historia.history['val_loss'], label='Pérdida de validación')\n",
@@ -676,7 +700,11 @@
     "    plt.show()\n",
     "\n",
     "    # HERE STARTS THE B)\n",
+    "\n",
+    "    # Predict on test set\n",
     "    y_pred = model.predict(X_test, verbose=0)\n",
+    "\n",
+    "    # Generate and print classification report and confusion matrix\n",
     "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
     "    y_test_classes = np.argmax(y_test_OHE, axis=1)\n",
     "    print(\"- CLASSIFICATION REPORT\\n\")\n",
@@ -691,6 +719,7 @@
     "\n",
     "    plt.show()\n",
     "\n",
+    "    # Calculate and append accuracy, precision, recall, and F1 score for the split\n",
     "    accuracy = accuracy_score(y_test_classes, y_pred_classes)\n",
     "    precision = precision_score(y_test_classes, y_pred_classes, average='weighted')\n",
     "    recall = recall_score(y_test_classes, y_pred_classes, average='weighted')\n",
@@ -766,6 +795,7 @@
     "avg_recall = np.mean(recalls)\n",
     "avg_f1s = np.mean(f1s)\n",
     "\n",
+    "# Printing the average values of the metrics\n",
     "print(f'Average accuracy: {avg_accuracy}')\n",
     "print(f'Average precision: {avp_precision}')\n",
     "print(f'Average recall: {avg_recall}')\n",
